--- a/app/src/main/res/layout/item_voucher.xml
+++ b/app/src/main/res/layout/item_voucher.xml
@@ -15,6 +15,16 @@
         android:layout_height="wrap_content"
         android:padding="20dp">
 
+        <CheckBox
+            android:id="@+id/voucher_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible"/>
+
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/iv_voucher_icon"
             android:layout_width="48dp"
@@ -23,7 +33,7 @@
             android:padding="12dp"
             android:src="@android:drawable/ic_menu_agenda"
             app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Medium"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/voucher_checkbox"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:tint="?attr/colorPrimary"/>
@@ -62,14 +72,25 @@
             app:layout_constraintBottom_toTopOf="@id/btn_download"/>
 
         <ImageButton
+            android:id="@+id/btn_share"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="8dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@android:drawable/ic_menu_share"
+            app:tint="?attr/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_download" />
+
+        <ImageButton
             android:id="@+id/btn_download"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:src="@android:drawable/stat_sys_download"
-            app:tint="?attr/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:tint="?attr/colorPrimary" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
